[project]
name = "learning-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langchain>=0.3.18",
    "langchain-community>=0.3.17",
    "langchain-deepseek>=0.1.2",
    "langchain-openai>=0.3.6",
    "langchain-postgres>=0.0.13",
    "langchain-text-splitters>=0.3.6",
    "psutil>=7.0.0",
    "ragatouille>=0.0.9",
]

[dependency-groups]
dev = [
    "setuptools>=75.8.0",
]
