[project]
name = "learning-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ipykernel>=6.31.0",
    "langchain>=0.3.18",
    "langchain-community>=0.3.17",
    "langchain-deepseek>=0.1.2",
    "langchain-openai>=0.3.6",
    "langchain-postgres>=0.0.13",
    "langchain-text-splitters>=0.3.6",
    "langgraph>=0.5.4",
    "langgraph-checkpoint>=2.1.2",
    "langgraph-checkpoint-postgres>=2.0.25",
    "psutil>=7.0.0",
    "psycopg[binary,pool]>=3.2.4",
    "ragatouille>=0.0.9",
]

[dependency-groups]
dev = [
    "setuptools>=75.8.0",
]
